# lightrail

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  install.sh
.claude/skills/: core-actionbook  core-agent-browser  core-dynamic-skills  core-fix-skill-docs
.github/workflows/: ci.yml  release.yml
crates/lightrail/: Cargo.toml
crates/lightrail-core/: Cargo.toml
crates/lightrail-core/src/: config.rs  error.rs  git.rs  identity.rs  lib.rs  naming.rs
crates/lightrail-plugin-protocol/: Cargo.toml
crates/lightrail-plugin-protocol/src/: client.rs  error.rs  lib.rs  server.rs  types.rs  version.rs  wire.rs
crates/lightrail-plugin-protocol/tests/: protocol.rs
crates/lightrail/src/: admin.rs  cli.rs  compose.rs  doctor.rs  error.rs  journal.rs  lib.rs  main.rs  orchestrator.rs  output.rs  plugin_host.rs  plugin_registry.rs  process.rs  project.rs  secrets.rs  telemetry.rs  workspace.rs
crates/lightrail/src/commands/: init.rs  mod.rs  profile.rs
crates/lightrail/src/orchestrator/: view.rs
docs/: architecture.md  fast-build-and-ci-caching-guide.md  plugin-protocol.md  product-spec.md
examples/multi-app/: .dockerignore  README.md  compose.yaml  lightrail.init.fly.example.toml  lightrail.init.hetzner.example.toml  lightrail.init.kubernetes.example.toml  lightrail.init.ssh.example.toml
examples/multi-app/apps/api/public/: index.html
examples/multi-app/apps/frontend/: Dockerfile
examples/multi-app/apps/frontend/public/: index.html
examples/single-app/: README.md  compose.yaml  lightrail.init.fly.example.toml  lightrail.init.hetzner.example.toml  lightrail.init.kubernetes.example.toml  lightrail.init.ssh.example.toml
examples/single-app/public/: index.html
plugins/lightrail-plugin-compose/: Cargo.toml
plugins/lightrail-plugin-compose/src/: command.rs  compose_model.rs  contract.rs  error.rs  lib.rs  main.rs  runtime.rs
plugins/lightrail-plugin-fly/: Cargo.toml  README.md
plugins/lightrail-plugin-fly/src/: api.rs  command.rs  lib.rs  main.rs  model.rs  plugin.rs
plugins/lightrail-plugin-hetzner/: Cargo.toml  README.md
plugins/lightrail-plugin-hetzner/src/: api.rs  main.rs  model.rs  plugin.rs  ssh.rs
plugins/lightrail-plugin-kubernetes/: Cargo.toml  README.md
plugins/lightrail-plugin-kubernetes/src/: command.rs  config.rs  lib.rs  lock.rs  main.rs  model.rs  plugin.rs
plugins/lightrail-plugin-ssh/: Cargo.toml
plugins/lightrail-plugin-ssh/src/: lib.rs  main.rs
plugins/lightrail-plugin-ssh/src/remote/: bootstrap.sh  probe.sh
