[package]
name = "lightrail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Validated domain model and configuration for Lightrail"

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
