[package]
name = "lightrail-plugin-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Versioned JSON-RPC protocol shared by Lightrail and its plugins"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
