[package]
name = "lightrail-plugin-fly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentless Fly.io Apps and Machines capabilities for Lightrail"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
hex.workspace = true
lightrail-plugin-protocol = { path = "../../crates/lightrail-plugin-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
